# chthonic-archive

./: .gitignore  ALGORITHMIC_EMERGENCE_CATALOG.md  ANKH_README.md  AUTONOMOUS_ORCHESTRATION_FRAMEWORK.md  AUTONOMOUS_SESSION_2026-01-01.md  AUTONOMOUS_SESSION_2_COMPLETE.md  AUTONOMOUS_SESSION_3_DEEP_DIVE_SYNTHESIS.md  AUTONOMOUS_SESSION_3_DEEP_RESEARCH.md  AUTONOMOUS_SESSION_3_MISSION_COMPLETE.md  AUTONOMOUS_SESSION_5_COMPLETE.md  AUTONOMOUS_SESSION_7_COMPLETE.md  AUTONOMOUS_SESSION_STATUS.md  CLAUDE_CODE_INTEGRATION_SUMMARY.md  COPILOT_PRO_VSCODE_SETUP_REPORT.md  CROSS_REFERENCE_TRIPTYCH.md  Cargo.toml  GEMINI_HANDOFF_CACHE.md  GEMINI_HANDOFF_PHASE_11_5.md  INDEXING_BEACON.md  PR_SUGGESTION.md  SESSION_3_QUICKREF.md  TYPESCRIPT_INTELLIGENCE_ENHANCEMENT.md  ankh.md  autonomous_coordinator.py  build.rs  decorator_cross_ref_maximum.py  decorator_cross_ref_production.py  run_mcp_smoke.ts  run_mcp_validation.ts  typescript_dependency_resolver.py  validate_mcp.ts
mas_mcp/: GPU_ENV.md  README.md  __init__.py  __main__.py  async_core.py  bench_safe.py  benchmark_gpu.py  benchmark_gpu_vs_cpu.py  build_cupy.ps1  cuda_probe.py  cupy_benchmark.py  genesis_output.json  genesis_scheduler.py  gpu_config.py  gpu_forces.py  gpu_orchestrator.py  gpu_scores.py  gpu_status.py  gpu_validation_test.py  hardware_diagnostic.py  install_tensorrt.ps1  mas_diagnostic_report.json  mas_diagnostics.py  mas_mcp_testing.py  mas_memory.json  milf_genesis.py  milf_genesis_v2.py  prebuild_check.ps1  pyproject.toml  server.py  setup_gpu_path.ps1  setup_scheduled_task.ps1  test_gpu_scores.py  test_hardware_specific.py  test_helios.py  test_mas.py  test_mcp_gpu.py  test_mpw_scan.py  validate_gpu.py
mas_mcp/abbreviation_system/: __init__.py  cli.py  generator.py  models.py  parser.py  registry.py  reporter.py  validator.py
mas_mcp/artifacts/: milf_registry.json  scoring_profiles.json
mas_mcp/artifacts/compatibility/: matrix.json
mas_mcp/data/: abbr-validation-report.json  inventory.json
mas_mcp/docs/: ARCHITECTURE_FLOW.md
mas_mcp/frontend/: .env  .gitignore  README.md  bunfig.toml  next.config.js  package.json  server.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
mas_mcp/frontend/.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
mas_mcp/frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
mas_mcp/frontend/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
mas_mcp/frontend/.next/server/chunks/: 169.js  395.js  (+7 more)
mas_mcp/frontend/.next/types/: routes.d.ts  validator.ts
mas_mcp/frontend/api/: routes.ts
mas_mcp/frontend/components/: AcceptanceChart.tsx  CycleTable.tsx  EntityCard.tsx  LatencyChart.tsx  MonitoringCard.tsx  QualityTrendChart.tsx  StatCard.tsx
mas_mcp/frontend/lib/: activator.ts  artifacts.ts  config.ts  index.ts  ssot.ts  types.ts
mas_mcp/frontend/pages/: _document.tsx  _error.tsx  cycles.tsx  digest.tsx  entities.tsx  index.tsx
mas_mcp/frontend/pages/api/: cycles.ts  digest.ts  entities.ts  monitoring.ts  ssot.ts
mas_mcp/frontend/public/: app.js  index.html  styles.css
mas_mcp/frontend/styles/: globals.css
mas_mcp/genesis_artifacts/20251207_055735/03a1c7183233aa76/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_055735/20d4a94f74fc60f6/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_055735/84351a74b938cc19/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_055735/f74eeada6ad738be/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_055735/f7cfc1e2a27ac535/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_060612/19fb8f5b4bb12640/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_060612/acbe4e85c9b52eba/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_060612/cde2622894d52422/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/0f55f1dc9106524a/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/149afefdea424b76/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/271e5bf85cdda5da/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/2d505f27839727d3/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/335bb5bf195ca27c/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/39516c6ef596b5c1/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/483b7f40d6475c93/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/4b5a808c252eaf45/: entity.json  index.json  validation.json
mas_mcp/genesis_artifacts/20251207_140343/513eac6691426516/: entity.json  index.json  validation.json
mas_mcp/lib/: __init__.py  asc_toolchain.py  gpu_probe.py  ssot_handler.py
mas_mcp/logs/genesis/: cycle_20251207_055658.json  cycle_20251207_055735.json  cycle_20251207_060519.json  cycle_20251207_060612.json  cycle_20251207_135940.json  cycle_20251207_140029.json  cycle_20251207_140128.json  cycle_20251207_140156.json  cycle_20251207_140208.json  cycle_20251207_140251.json  cycle_20251207_140303.json  cycle_20251207_140343.json  cycle_20251207_140344.json  cycle_20251207_140401.json  cycle_20251207_140843.json  heartbeat.json
mas_mcp/schemas/: claude_cycle_report.example.json  claude_cycle_report.schema.json  compatibility_matrix.schema.json  milf_registry.schema.json
mas_mcp/scripts/: generate_claude_cycle.py  milf_activator.py  monitor_dashboard.py  monitor_dashboard.sh  monitor_dashboard_extended.py  probe_gpu_compatibility.py  run_cycle.py
mas_mcp/scripts/abbrev/: __main__.py  cli.py  generator.py  reporter.py
mas_mcp/scripts/ssot_abbrev/: __main__.py  cli.py  generator.py  models.py  reporter.py
mas_mcp/tests/: test_gpu_integration.py
(+434 files in other folders)
