[package]
name = "chthonic-archive"
version = "0.1.0"
edition = "2021"
authors = ["The Savant <psychonoir@chthonic.archive>"]
description = "The Chthonic Archive: Triumvirate Ascension - ASC-NATIVE-CHAIN-RPG"
license = "WTFPL"
repository = "https://github.com/PsychoNoir/chthonic-archive"

# ╔══════════════════════════════════════════════════════════════════╗
# ║   THE IMPOSSIBLE STACK - Rust/Vulkan/Solana Native              ║
# ║   "We do not accept the CRCs as they are."                       ║
# ║   <69.96 Alpha Omega>                                            ║
# ╚══════════════════════════════════════════════════════════════════╝

[dependencies]
# === WINDOWING ===
winit = "0.29"

# === VULKAN 1.3 (Raw Bindings - Dynamic Rendering + Ray Tracing Ready) ===
ash = { version = "0.38", features = ["loaded", "debug"] }
ash-window = "0.13"

# === GPU MEMORY ===
gpu-allocator = { version = "0.22", features = ["vulkan"] }

# === ENTITY COMPONENT SYSTEM (Per Gemini Directive) ===
bevy_ecs = "0.14"

# === SERIALIZATION (ASC Lore Ingestion) ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === MATHEMATICS (Vector/Matrix - The WHR Power Law) ===
glam = "0.24"

# === ASYNC RUNTIME (For Future Solana Integration) ===
tokio = { version = "1.0", features = ["full"] }

# === LOGGING ===
env_logger = "0.10"
log = "0.4"

# === ERROR HANDLING ===
anyhow = "1.0"
thiserror = "1.0"

# ╔══════════════════════════════════════════════════════════════════╗
# ║   FUTURE: SOLANA BLOCKCHAIN INTEGRATION                          ║
# ║   anchor-lang = "0.28"                                           ║
# ║   solana-sdk = "1.16"                                            ║
# ║   solana-client = "1.16"                                         ║
# ╚══════════════════════════════════════════════════════════════════╝

# ╔══════════════════════════════════════════════════════════════════╗
# ║   BUILD DEPENDENCIES - SHADER COMPILATION                        ║
# ║   shaderc: GLSL → SPIR-V at build time                           ║
# ╚══════════════════════════════════════════════════════════════════╝
[build-dependencies]
shaderc = "0.8"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
